# ai-sdlc

./: .gitignore  AI_Agent_SDLC_Brainstorm_Request.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-11-schemas-and-ledger-integrity.md
docs/superpowers/specs/: 2026-07-11-cost-optimized-ai-agent-sdlc-design.md
src/aisdlc/: errors.py
src/aisdlc/artifacts/: store.py
src/aisdlc/canonical/: hashing.py  jcs.py
src/aisdlc/ledger/: chain.py  db.py  models.py  store.py
src/aisdlc/schemas/: registry.py
src/aisdlc/schemas/evidence-event/: v0.1.0.schema.json
src/aisdlc/schemas/execution-contract/: v0.1.0.schema.json
src/aisdlc/validation/: contract.py  event.py
tests/: conftest.py  test_artifacts.py  test_canonical.py  test_contract_hash.py  test_contract_schema.py  test_event_hash.py  test_event_schema.py  test_import.py  test_ledger_append.py  test_ledger_chain.py  test_ledger_concurrency.py  test_ledger_crash.py  test_ledger_db.py  test_phase1a_acceptance.py
tests/fixtures/contracts/: invalid_unknown_field.json  valid_r1_minimal.json
tests/fixtures/events/: valid_envelope.json
