[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aisdlc"
version = "0.1.0"
description = "Cost-optimized AI Agent SDLC control plane — Phase 1A ledger"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23.0",
  "python-ulid>=3.0.0",
  "rfc3339-validator>=0.1.4",
  "rfc8785>=0.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aisdlc"]

[tool.hatch.build.targets.wheel.force-include]
"src/aisdlc/schemas" = "aisdlc/schemas"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
